@@ -1,5 +1,11 @@
 2011-10-07  Martin Hoeller  <martin.hoeller@xss.co.at>
 
+    Bug 3035289/Patch 3035325:
+    * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
+      (drawItem): check if series and item are visible
+
+2011-10-07  Martin Hoeller  <martin.hoeller@xss.co.at>
+
     * source/org/jfree/chart/renderer/PolarItemRenderer.java
       (useFillPaint): New field,
       (legendLine): Likewise;
